# meeting-summarizer

meeting-ai/: .gitignore  README.md  setup.bat  setup.sh
meeting-ai/backend/: .dockerignore  .env.example  Dockerfile  Makefile  pyproject.toml  requirements.txt  run.bat
meeting-ai/backend/app/: __init__.py  db.py  deps.py  main.py  models.py  schemas.py
meeting-ai/backend/app/providers/: base.py  hf_provider.py  mock_provider.py  openai_provider.py
meeting-ai/backend/app/routers/: actions.py  meetings.py  summarize.py  transcribe.py
meeting-ai/backend/logs/: openai.jsonl
meeting-ai/backend/scripts/: seed.py
meeting-ai/frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  run.bat
meeting-ai/frontend/src/: App.tsx  main.tsx
meeting-ai/frontend/src/components/: ActionTable.tsx  ExportMenu.tsx  Recorder.tsx  StatCard.tsx  SummaryPanel.tsx  TopBar.tsx  UploadCard.tsx
meeting-ai/frontend/src/components/ui/: Button.tsx  Input.tsx  Toast.tsx
meeting-ai/frontend/src/pages/: Dashboard.tsx  MeetingDetail.tsx
meeting-ai/frontend/src/store/: useMeetingStore.ts
meeting-ai/frontend/src/types/: index.ts
meeting-ai/infra/: docker-compose.yml
